--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.umd.js"
       defer
     ></script>
-    <script src="main.js" defer></script>
+    <script type="module" src="main.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
