feat: Add temperature and humidity metrics to dashboard with corresponding updates in main.js and style.css

--- a/index.html
+++ b/index.html
@@ -68,6 +68,36 @@
 
         <div class="metric-card">
           <div class="metric-label">
+            <span class="icon">🌡️</span> Temperature
+          </div>
+          <div class="metric-value">
+            <span id="temperature">--</span><span class="metric-unit">°C</span>
+          </div>
+          <div class="metric-progress">
+            <div
+              id="temperatureProgress"
+              class="metric-progress-bar"
+              style="width: 0%"
+            ></div>
+          </div>
+        </div>
+
+        <div class="metric-card">
+          <div class="metric-label"><span class="icon">💧</span> Humidity</div>
+          <div class="metric-value">
+            <span id="humidity">--</span><span class="metric-unit">%</span>
+          </div>
+          <div class="metric-progress">
+            <div
+              id="humidityProgress"
+              class="metric-progress-bar"
+              style="width: 0%"
+            ></div>
+          </div>
+        </div>
+
+        <div class="metric-card">
+          <div class="metric-label">
             <span class="icon">⚡</span> System Efficiency
           </div>
           <div class="metric-value">
